<resources>
    <string name="app_name">MaterialDesignProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Andrew Sozonov</string>
    <string name="nav_header_subtitle">Asozonov@yandex.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="log_in">Log in</string>
    <string name="labelLogin">login</string>
    <string name="enter_login">Enter login</string>
    <string name="close">Close</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_tvseries">Tv Series</string>
    <string name="menu_cartoons">Cartoons</string>
    <string name="menu_documentary">Documentary</string>
    <string name="menu_blue_theme">Blue Theme</string>
    <string name="menu_brown_theme">Brown Theme</string>
    <string name="menu_purple_theme">Purple Theme</string>
    <string name="description">
    К середине XXII века человечество почти исчерпало природные ресурсы перенаселённой Земли. Корпорация RDA разворачивает крупномасштабную добычу редкого минерала анобтаниума[12] на Пандоре — колонизируемом людьми спутнике газового гиганта Полифем в звёздной системе Альфы Центавра. Пандора, чья атмосфера ядовита для людей, густо населена флорой и фауной, а также трёхметровыми разумными гуманоидами. Они называют себя на’ви[35], почитают богиню-мать Эйву, живут в первобытной гармонии с природой и недовольны её разрушением, устроенным землянами.
    Аватар в амниотанке

    Для исследования биосферы Пандоры учёные используют «аватары» — спроектированные гибриды тел на’ви и людей. Аватар дистанционно управляется человеком-оператором, чья ДНК была использована при его создании. Оператор «спит» в узле нейросвязи, мысленно управляя аватаром как своим телом[36]. Аватары крайне дороги, поэтому когда Томми, учёного и оператора аватара, убивают незадолго до отправки на Пандору, представители RDA предлагают занять его место брату-близнецу погибшего Джейку Салли, страдающему параличом ног бывшему морскому пехотинцу. Ради денег на лечение Джейк соглашается и прибывает на Пандору в 2154 году.

    Джейк знакомится с главой программы «Аватар» доктором Грэйс Огустин; та считает солдата плохой заменой погибшему учёному. Против её воли начальник колонии Паркер Селфридж назначает Джейка охранником для учёных. В первой экспедиции, пока аватары Грэйс и её коллеги Норма Спеллмана отвлеклись, на аватара Джейка нападает танатор, крупный хищник, напоминающий пантеру. Убегая, Джейк теряется в лесу, где его атакует стая мелких хищников. Его спасает Нейтири, охотница-на’ви из клана Оматикайя. Следуя удивившему её знаку природы, она приводит Джейка в огромный Древо-дом, где веками живёт клан. После вмешательства Мо’ат, матери Нейтири и духовного лидера Оматикайя, его решают оставить, поручив Нейтири обучить его культуре и охоте. Нейтири недовольна; как позже узнаёт Джейк, земляне-солдаты убили её сестру.

    На участке земли под Древо-домом земляне запланировали новый карьер. Глава по безопасности полковник Майлз Куоритч вместе с Селфриджем предлагает Джейку через аватар тайно от учёных собирать разведывательные данные об Оматикайя на случай конфликта, а также узнать, на что можно обменять их согласие переселиться. Взамен ему обещано оплатить лечение позвоночника[37]. Грэйс подозревает сговор и вместе с Джейком и Нормом перебирается в полевой лагерь учёных в горах Аллилуйя, где мощные электромагнитные вихри не позволяют нормально работать земной технике.
    </string>
</resources>
