<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Collections">
        <menu>
            <item
                android:id="@+id/nav_movies"
                android:icon="@drawable/ic_play_arrow_black_24dp"
                android:title="@string/menu_movies" />
            <item
                android:id="@+id/nav_tvseries"
                android:icon="@drawable/ic_play_arrow_black_24dp"
                android:title="@string/menu_tvseries" />
            <item
                android:id="@+id/nav_cartoons"
                android:icon="@drawable/ic_play_arrow_black_24dp"
                android:title="@string/menu_cartoons" />
            <item
                android:id="@+id/nav_documentary"
                android:icon="@drawable/ic_play_arrow_black_24dp"
                android:title="@string/menu_documentary" />
        </menu>
        </item>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/menu_favorites" />
        </menu>
    </item>

</menu>
