<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_movies">

    <fragment
        android:id="@+id/nav_movies"
        android:name="ru.andreysozonov.materialdesignproject.ui.home.MoviesFragment"
        android:label="@string/menu_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/nav_tvseries"
        android:name="ru.andreysozonov.materialdesignproject.ui.gallery.TvseriesFragment"
        android:label="@string/menu_tvseries"
        tools:layout="@layout/fragment_tvseries" />

    <fragment
        android:id="@+id/nav_cartoons"
        android:name="ru.andreysozonov.materialdesignproject.ui.slideshow.CartoonsFragment"
        android:label="@string/menu_cartoons"
        tools:layout="@layout/fragment_cartoons" />

    <fragment
        android:id="@+id/nav_documentary"
        android:name="ru.andreysozonov.materialdesignproject.ui.tools.DocumentaryFragment"
        android:label="@string/menu_documentary"
        tools:layout="@layout/fragment_documentary" />

    <fragment
        android:id="@+id/nav_share"
        android:name="ru.andreysozonov.materialdesignproject.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="ru.andreysozonov.materialdesignproject.ui.send.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
</navigation>