<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_blueTheme"
        android:icon="@drawable/ic_blue"
        android:orderInCategory="100"
        android:title="@string/menu_blue_theme"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_brownTheme"
        android:icon="@drawable/ic_brown"
        android:orderInCategory="100"
        android:title="@string/menu_brown_theme"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_purpleTheme"
        android:icon="@drawable/ic_purple"
        android:orderInCategory="100"
        android:title="@string/menu_purple_theme"
        app:showAsAction="ifRoom" />
</menu>
